Use custom library name for easier referencing
I need to reference the master of kdyby/translation in project
as a stable version of the library. I do not plan to maintain
this further and the library will be removed in the following
months - once we replace it with contributte/translation.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "kdyby/translation",
+	"name": "rootpd/translation",
 	"type": "library",
 	"description": "Integration of Symfony/Translation into Nette Framework",
 	"keywords": ["nette", "kdyby", "translation"],
