--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
 		"issues": "https://github.com/kdyby/translation/issues"
 	},
 	"require": {
-		"php": ">=7.1",
-		"kdyby/strict-objects": "^2.0",
+		"php": "^8.0",
 		"latte/latte": "^2.5.2 || ^3.0",
 		"nette/caching": "^3.0",
 		"nette/di": "^3.0",
@@ -44,8 +43,7 @@
 		"nette/bootstrap": "^3.0",
 		"nette/forms": "^3.0",
 		"tracy/tracy": "^2.7 || ^3.0",
-		"kdyby/console": "^2.7.1@dev",
-		"kdyby/monolog": "^2.0",
+		"kdyby/console": "^v4.0.0",
 		"symfony/yaml": "^3.4 || ^4.0",
 		"symfony/console": "^3.4 || ^4.0",
 		"nette/tester": "^2.2",
